--- a/techno/index.html
+++ b/techno/index.html
@@ -1,22 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="./vue.min.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./style.css" />
+    <title>Document</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="./vue.min.js"></script>
-  <link rel="stylesheet" href="./style.css">
-  <title>Document</title>
-</head>
+  <body>
+    <div id="app">
+      <section class="produtos">
+        <div v-for="produto in produtos" :key="produto.id" class="produto">
+          <img :src="produto.img" :alt="produto.nome" class="produto_img" />
+          <div class="produto_info">
+            <span class="produto_preco"> {{produto.preco}} </span>
+            <h2 class="produto_titulo">{{produto.nome}}</h2>
+          </div>
+        </div>
+      </section>
+    </div>
 
-<body>
-
-  <div id="app">
-    {{produtos}}
-  </div>
-
-  <script src="./app.js"></script>
-</body>
-
+    <script src="./app.js"></script>
+  </body>
 </html>
