--- a/techno/index.html
+++ b/techno/index.html
@@ -45,7 +45,7 @@
         </div>
         <div class="modal_dados">
           <button @click="produto = false" class="modal_fechar">X</button>
-          <span class="modal_preco">{{produto.preco}}</span>
+          <span class="modal_preco">{{produto.preco | numeroPreco}}</span>
           <h2 class="modal_titulo">{{produto.nome}}</h2>
           <p>{{produto.descricao}}</p>
           <p>{{produto.estoque}}</p>
@@ -63,6 +63,9 @@
         </div>
       </div>
     </section>
+    <div class="alerta" :class="{ativo: alertaAtivo}">
+      <p class="alerta_mensagem">{{mensagemAlerta}}</p>
+    </div>
   </div>
 
   <script src="./app.js"></script>
